feature: various java version features